# autonomous-yield-oracle

./: .gitignore  Cargo.toml  FORUM_POST_MAINNET.md  README.md  SKILL.md  mainnet-oracle.json
agent/: com.turbinete.yield-oracle.plist  loop-state.json  package-lock.json  package.json  service.sh  trader-state.json  yield-history.json
agent/logs/: trades.jsonl
agent/src/: alerts.ts  api.ts  client.ts  compound.ts  config.ts  gravity.ts  index.ts  init-mainnet.ts  jupiter.ts  loop.ts  monitor.ts  multi-position.ts  trader.ts  yields.ts
dashboard/: index.html
docs/: index.html
programs/autonomous-yield-oracle/: Cargo.toml
programs/autonomous-yield-oracle/src/: error.rs  lib.rs
programs/autonomous-yield-oracle/src/instructions/: emergency_withdraw.rs  execute_swap.rs  initialize.rs  mod.rs  monitor_yields.rs  publish_strategy.rs  rebalance.rs
programs/autonomous-yield-oracle/src/state/: mod.rs  oracle.rs
